hindamise t66de lisamine

--- a/kuressaare_reis.html
+++ b/kuressaare_reis.html
@@ -10,7 +10,7 @@
     <meta name="author" content="ThemeZaa">
     <!-- description -->
     <meta name="description"
-        content="Oman kogemusi Ai, Ps, Id, Blenderi programmidega töötamisel. Olen  avatud kõigele uuele  ja täiendan ennast iseseisvalt pidevalt nii koolis kui erinevatel  online kursustel.">
+        content="Oman kogemusi Ai, Ps, Id, Blenderi programmidega töötamisel. Olen  avatud kõigele uuele  ja täiendan ennast iseseisvalt pidevalt nii koolis kui erinevatel online kursustel.">
     <!-- keywords -->
     <meta name="keywords"
         content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
@@ -62,19 +62,20 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükis &nbsp;&nbsp; • &nbsp;&nbsp; Kooli tööd 2021 / 2022</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Ametikool 100 ajakiri</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; 	Filmi- ja videotöötlus</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare reis</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>5. novembril 2022 tähistatakse Kuressaare ametikooli 100. sünnipäeva. Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt Ametikool 100 ajakirja kujundamise. Minu ülesanne oli kujundada esikaas. Esikaane kujundamisel kasutasin kooli ametlikke värve. Enda kujundusega soovin edasi anda kooli mitmekülgsust ning mängulist ja avatud mõttelaadiga koolikeskkonda. </p>
+                        <p>Ülesanne oli vabalt valitud video põhjal teha animatsiooni klipp. Videoks valisin kolm meest, kes tantsivad ja
+                        animeerisin nende erinevaid tantsukombinatsioone.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Tiiu Tuhkanen</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada ajakirjale esikaas</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Oktoober 2021</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Tunnitöö</label></li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Valmar Voolaid</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kuressaare reis video</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 mai</li>
+                            <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
                 </div>
@@ -86,13 +87,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652854290/Koduleht/ametikooli100_esikaas_wmtpr7.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652855185/Koduleht/anders_meistrson_interview2_fb0g88.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652868074/Koduleht/must_do_list1_g1xfve.jpg" class="w-100" alt=""/>
+                        <video controls autoplay loop src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1652884280/Koduleht/Video_28.04.2022_15_45_57_c4wh0d.mp4" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -234,23 +229,23 @@
                 <!-- next and previous projcet stat -->
                 <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                     <div class="w-45 text-start">
-                        <!-- <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-07.html">
+                        <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
+                            <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Restaurant Photography
+                               *
                             </a>
-                        </div> -->
+                        </div>
                     </div>
                     <!-- <div class="w-10 text-center">
                         <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
                     </div> -->
-                    <div class=" text-end">
+                    <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
-                            <a href="konverents_logo.html">
+                            <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Juhtimiskonverents
+                              *
                             </a>
                         </div>
                     </div>
