--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -115,7 +115,7 @@ gtag('config', 'G-XXXXXXX');
                         <a href="ajakiri.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_900/v1641308899/Koduleht/Kaanekujundus_800x800px_l4fxja.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652854290/Koduleht/ametikooli100_esikaas_wmtpr7.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
@@ -179,18 +179,17 @@ gtag('config', 'G-XXXXXXX');
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
                     <li class="grid-item grid-item-double reklaam trükis wow animate__fadeInUp">
-                        <a href="eesti_ekspress.html">
+                        <a href="kuressaare_reis.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1648893981/Koduleht/eestiekpress_900x445_mockup_ezu0pl.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652884804/Koduleht/kuressaare_reisi_pilt_h9dfgm.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Eesti
-                                                Ekspress</span>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kuressaare reis</span>
                                             <p class="no-letter-spacing text-small mb-0 text-medium-gray">Reklaam ja
                                                 Trükis</p>
                                         </div>
@@ -202,17 +201,17 @@ gtag('config', 'G-XXXXXXX');
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
                     <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
-                        <a href="pipewell.html">
+                        <a href="postkaard.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641722353/Koduleht/pipewell-tupo_dqvsil.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652889476/Koduleht/postkaard._piltjpg_zhxr8m.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Pipewell</span>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Akrokefaalia postkaard</span>
                                             <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
                                                 Disain</p>
                                         </div>
@@ -225,18 +224,17 @@ gtag('config', 'G-XXXXXXX');
                     <!-- start portfolio item -->
                     <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp"
                         data-wow-delay="0.4s">
-                        <a href="van_gogh.html">
+                        <a href="cv_video.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647169227/Koduleht/vangoghi_mockup_900x445_halltaust_wultww.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652887132/Koduleht/cv_pilt_y00pvd.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Van
-                                                Goghi Raamat</span>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">CV video</span>
                                             <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
                                                 Disain</p>
                                         </div>
