Syte lehe lisamine

--- a/syte.html
+++ b/syte.html
@@ -66,9 +66,11 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top"> Õpilasfirma Syte koduleht</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Minu üheks ülesandeks oli meie õpilasfirmas Syte, luua kodulehe prototüüp ja koduleht. Kodulehel on kuvatud meie kõigi 6 tiimiliikme parimad
-                        kujundustööd. Veebilehe olen kirjutanud peamiselt HTML ja CSS programmeerimise keelt kasutades. Koduleht on veel töös
-                        ja täineneb päev-päevalt.</p>
+                        <p>Osalemine õpilasfirmas andis hea kogemuse. Sain teada oma tugevustest ja nõrkustest. Pean arendama enda meeskonnatöö oskust.  
+                        Välakutsuv oli minu jaoks meeskonnas suhtlemine ja enesekehtestamine. Minu üheks tugevuseks on iseseisvalt töötamine ja tähtaegadest kinnipidamine.
+                         Peamiseks ülesandeks õpilasfirmas oli kodulehe kujundamine. Õppisin väga palju, kuidas teha kodulehe prototüüp ning hiljem  disainida õpilasfirma koduleht. 
+                         Sellega kaasnes palju iseseisvat õppimist ja HTML ning CSS programmeerimimise keelega töötamist. Peale kodulehe sain ka mõningaid kujundusi proovida - näiteks 
+                         discgolfi ketastele kujunduse tegemine.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
@@ -77,6 +79,7 @@
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Õpilasfirmale Syte kodulehe loomine</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Koduleht:</label><a href="https://oliverjuss.github.io/syte/">Syte</li><a
                         </ul>
                     </div>
                 </div>
@@ -86,20 +89,46 @@
         <!-- start gallery section -->
         <section class="wow animate__fadeIn">
             <div class="container">
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642948163/Koduleht/pototyyp2_jjpcut.jpg" class="w-100" alt=""/>
+                </div>
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1642948555/Koduleht/syte_rruqpx.jpg" class="w-100"
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942530/Koduleht/syte_lehe_pilt_oturyp.jpg" class="w-100"
                             alt="" />
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642948163/Koduleht/pototyyp_tucu3k.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642948163/Koduleht/pototyyp2_jjpcut.jpg" class="w-100" alt=""/>
-                    </div>
-                   
-                   
-                </div>
+                    <div class="row">
+                        <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                            <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942697/Koduleht/syte_lehe_pilt2_jicphs.jpg" class="w-100"
+                                alt="" />
+                        </div>
+                        <div class="row">
+                            <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                                <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943122/Koduleht/syte_lehe_pilt3_pnpfbj.jpg" class="w-100"
+                                    alt="" />
+                            </div>
+                            <div class="row">
+                                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943460/Koduleht/syte_lehe_pilt4_hcgfyt.jpg" class="w-100"
+                                        alt="" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943750/Koduleht/syte_lehe_pilt5_cwwtrq.jpg" class="w-100"
+                                        alt="" />
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943967/Koduleht/syte_lehe_pilt6_itfic3.jpg" class="w-100"
+                                            alt="" />
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                                            <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652944130/Koduleht/syte_lehe_pilt7_lzwfhl.jpg" class="w-100"
+                                                alt="" />
+                                        </div>
+                   </div>
             </div>
         </section>
         <!-- end gallery section -->
