--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -247,20 +247,18 @@ gtag('config', 'G-XXXXXXX');
 
                     <!-- start portfolio item -->
                     <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp" data-wow-delay="0.4s">
-                        <a href="meny.html">
+                        <a href="syte.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647168252/Koduleht/menu_mockup_halltaust_ltqbkl.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652941739/Koduleht/syte_piltjpg_nmdr6a.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Bite
-                                                Dounts</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
-                                                Disain</p>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte</span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray"></p>
                                         </div>
                                     </div>
                                 </figcaption>
