Ametikooli video lisamine

--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -190,8 +190,7 @@ gtag('config', 'G-XXXXXXX');
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
                                                 class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kuressaare reis</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Reklaam ja
-                                                Trükis</p>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Filmi- ja videotöötlus</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -235,8 +234,7 @@ gtag('config', 'G-XXXXXXX');
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
                                                 class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">CV video</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
-                                                Disain</p>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Filmi- ja videotöötlus</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -258,7 +256,7 @@ gtag('config', 'G-XXXXXXX');
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
                                                 class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray"></p>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Ettevõtluspraktika/ Õpilasfirma</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -269,19 +267,18 @@ gtag('config', 'G-XXXXXXX');
 
                     <!-- start portfolio item -->
                     <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
-                        <a href="koolitusmajakas.html">
+                        <a href="reeklaamvideo.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647170103/Koduleht/900x900px-_koolitusmajakasLogo1_halltaust_rm1imv.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652948844/Koduleht/Ametikooli_pilt_qhgbp7.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koolitusmajakas</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
-                                                Disain</p>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom"> Reklaamvideo eriala kohta</span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Filmi- ja videotöötlus</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -289,7 +286,7 @@ gtag('config', 'G-XXXXXXX');
                         </a>
                     </li>
                     <!-- end portfolio item -->
-                    <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
+                    <!-- <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
                         <a href="piktogrammid.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -308,10 +305,10 @@ gtag('config', 'G-XXXXXXX');
                                 </figcaption>
                             </figure>
                         </a>
-                    </li>
+                    </li> -->
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
-                    <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                    <!-- <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
                         <a href="kalender.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -330,10 +327,10 @@ gtag('config', 'G-XXXXXXX');
                                 </figcaption>
                             </figure>
                         </a>
-                    </li>
+                    </li> -->
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
+                    <!-- <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
                         <a href="spordibanner.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -352,9 +349,9 @@ gtag('config', 'G-XXXXXXX');
                                 </figcaption>
                             </figure>
                         </a>
-                    </li>
+                    </li> -->
                      <!-- start portfolio item -->
-                     <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                     <!-- <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
                         <a href="mai_hindamis_t66d.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -373,7 +370,7 @@ gtag('config', 'G-XXXXXXX');
                                 </figcaption>
                             </figure>
                         </a>
-                    </li>
+                    </li> -->
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
                     <!-- end portfolio item -->
